--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,1 +1,54 @@
 @charset "UTF-8";
+
+@media screen and (min-width: 768px) {
+
+    body {
+        background-color: #fff2e7;
+    }
+    
+    #container-principal {
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+    }
+
+    nav {
+        justify-content: space-around;
+        padding: 10px;
+    }
+
+    
+    main, footer, img#background-head {
+        width: 80%;
+    }
+
+    h1 #logo {
+        font-size: 1.2em;
+    }
+
+    a#contato {
+        font-size: 1.4em
+    }
+}
+
+@media screen and (min-width: 992px)  {
+
+    nav {
+        justify-content: space-evenly;
+    }
+
+    main, footer, img#background-head {
+        width: 65%
+    }
+
+    section.receitas {
+        width: 47%;
+    }
+
+    div.receitas-row {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+}
